style.css
@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html{
    font-size: 15px;
    font-family: Spartan, sans-serif;
    background-image: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
    background-size: 30%, 50%;
    background-repeat: no-repeat, no-repeat;
   background-position: top left, bottom right;


    
     
}

@media (min-width: 767px){
    html{
        background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
        background-size: 25%, 90%;
        background-repeat: no-repeat, no-repeat;
        background-position: top left, bottom right;
        
    }



        body{
            
            margin: 0 10px;
            width: 100vw;
            height: 100vh;
            background-position: left top, right bottom 100px;
            background-repeat:  no-repeat;
            background-size: contain, contain;
            
        }
    
}

body{
            
            margin: 0 10px;
            width: 100vw;
            height: 100vh;
            background-position: left top, right bottom 100px;
            background-repeat:  no-repeat;
            background-size: contain, contain;
            
        }

h2{
    color: hsl(300, 43%, 22%);
    margin-top: 70px;
    margin-bottom: 10px;
    font-size: 1.8em;
    text-align: center;
    
}
    
    


@media screen and (min-width: 767px){
     
    h2{
        color: hsl(300, 43%, 22%);
    margin-top: 70px;
    margin-bottom: 10px;
        margin-left: 80px;
    font-size: 1.8em;
    text-align: start;
    
    }
    
    
    

    
}

.header > p{
    
    width: 80%;
    font-weight: 300;
    font-size: 0.8em;
    color: hsl(303, 10%, 53%);
    line-height: 1.5;
    text-align: center;
    margin-bottom: 10px;
    margin-left: 50px;
}


@media screen and (min-width: 767px){
    .header > p{
        width: 25%;
        margin-top: 5px;
        text-align: start;
        margin-left: 80px;
    }
}

    
    
    
section.header{
    position: relative;
    
}
@media screen and (min-width: 767px){
    section.header{
        position: relative;
    }
}
    

ul{
    text-align: center;
    
}
    
    

@media screen and (min-width: 767px){
    ul{
        position: absolute;
        bottom: -55px;
        left: 400px;
        list-style: none;
        margin-top: 500px;
    }
}

ul li div{
    background-color: hsl(300, 24%, 96%);
    border: 1px solid hsl(300, 24%, 96%);
    border-radius: 3px;
    width: 80%;
    height: 10vh;
    padding: 20px;
    margin-top: 5px;
    margin-bottom: 6px; 
    margin-right: 40px;
    margin-left: 40px;   
}

@media screen and (min-width: 767px){
    ul li div{
        width: 35vw;
        height: 8vh;
        padding: 15px;
        margin-bottom: 15px;
        
    }
}


ul li div span{
     margin-left: 8px;
    color: hsl(300, 43%, 22%);
    font-weight: 700;
    font-size: 0.9em;
}
@media screen and (min-width: 767px){
    
    ul li div#reviews{
        position: relative;
        right: -50px;  
    }
    
    ul li div#guru{
        position: relative;
        right: -100px;
    }
    
    ul li div#best-tech{
        position: relative;
        right: -150px;
    }
    
}
    



.container-2{

    display: flex;
    flex-wrap: wrap;
    margin: 0px 30px;
    

}
@media screen and (min-width: 767px){
    
    .container-2{
        display: flex;
        margin-left: 150px;
        
    }
    
    
}

div.card{
    
    margin: 35px 5px 10px 5px;
    height: 30%;
    border: 1px solid hsl(300, 43%, 22%);
    border-radius: 5px;
    background-color: hsl(300, 43%, 22%);  
    padding: 15px;
    position: relative;
    
}

@media screen and (min-width: 767px){
    
        div.card{
        
        max-width: 25%;
        height: 30%;
        position: relative;
        margin-top: 100px;
        
    }
    
    #colton{
        
    }
    
    #irene{
        position: relative;
        bottom: -20px;
        margin-left: 25px;
        margin-right: 25px;
    
    }
    
    #anne{
        position: relative;
        bottom: -40px;
        
        
    }
}



section > .card{
/*    flex-basis: 25%;*/
/*    height: fit-content;*/
    
}

section > .card > img{
    border: 1px solid hsl(300, 43%, 22%);
    border-radius: 50px;
    width: 40px;
    margin-top: 10px;
}

section > .card > h4{
    color: hsl(300, 24%, 96%);
    font-size: 0.9em;
    font-weight: lighter;
    position: absolute;
    left: 65px;
    top: 30px;
    
    
}

section > .card > h4> span{
    color: hsl(333, 80%, 67%);
    
}

div.card p{
    color: hsl(300, 24%, 96%);
    font-size: 0.8em;
    margin: 20px 0;
    
}

.clear{
    width: 100vw;
    height: 100px;
}

footer{
    background-image:     background-position: bottom right;
    background-repeat: no-repeat;
    background-size: 70%;
}

    
    

